--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -19,5 +19,9 @@
 # To learn more, please read the Rails Internationalization guide
 # available at http://guides.rubyonrails.org/i18n.html.
 
-en:
-  hello: "Hello world"
+#en:
+#  hello: "Hello world"
+
+main_mailer:
+  notify_question_author:
+    subject: "New answer to your question!"
